--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": ".NET Core Launch (web)",
+      "name": "Launch Apps API",
       "type": "coreclr",
       "request": "launch",
-      "preLaunchTask": "build",
+      "preLaunchTask": "build apps.api",
       "console": "externalTerminal",
       "program": "${workspaceFolder}/src/services/apps/Apps.Api/bin/Debug/net7.0/Apps.Api.dll",
       "args": [],
@@ -24,10 +24,62 @@
         "/Views": "${workspaceFolder}/Views"
       }
     },
+
     {
-      "name": ".NET Core Attach",
+      "name": "Launch Books API",
       "type": "coreclr",
-      "request": "attach"
+      "request": "launch",
+      "preLaunchTask": "build books.api",
+      "launchSettingsProfile": "https",
+      "console": "externalTerminal",
+      "program": "${workspaceFolder}/src/services/books/Books.Api/bin/Debug/net7.0/Books.Api.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/src/services/books/Books.Api",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+        "uriFormat": "%s/swagger"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
+    },
+    {
+      "name": "Launch Movies API",
+      "type": "coreclr",
+      "launchSettingsProfile": "https",
+      "console": "externalTerminal",
+      "request": "launch",
+      "preLaunchTask": "build movies.api",
+      "program": "${workspaceFolder}/src/services/movies/Movies.Api/bin/Debug/net7.0/Movies.Api.dll",
+      "args": [],
+      "cwd": "${workspaceFolder}/src/services/movies/Movies.Api",
+      "stopAtEntry": false,
+      "serverReadyAction": {
+        "action": "openExternally",
+        "pattern": "\\bNow listening on:\\s+(https?://\\S+)",
+        "uriFormat": "%s/swagger"
+      },
+      "env": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "sourceFileMap": {
+        "/Views": "${workspaceFolder}/Views"
+      }
+    }
+  ],
+  "compounds": [
+    {
+      "name": "Run All",
+      "configurations": [
+        "Launch Apps API",
+        "Launch Books API",
+        "Launch Movies API"
+      ]
     }
   ]
 }
