--- a/.github/workflows/BuildAppsDockerImage.yaml
+++ b/.github/workflows/BuildAppsDockerImage.yaml
@@ -3,8 +3,12 @@ name: Build Apps Docker Image
 on:
   push:
     paths:
-      - 'src/services/apps*'
+      - 'src/services/apps/Apps.Api/*'
   workflow_dispatch:
+
+defaults:
+  run:
+    working-directory: ./src/services/apps/Apps.Api
 
 jobs:
   build-container-image:
