--- a/.github/workflows/BuildAppsDockerImage.yaml
+++ b/.github/workflows/BuildAppsDockerImage.yaml
@@ -6,6 +6,10 @@ on:
       - 'src/services/apps/Apps.Api/*'
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: ./src/services/apps/Apps.Api
+
 jobs:
   build-container-image:
     runs-on: ubuntu-latest
