--- a/src/services/apps/Apps.Api/Dockerfile
+++ b/src/services/apps/Apps.Api/Dockerfile
@@ -14,7 +14,7 @@ WORKDIR /src
 COPY ["src/services/apps/Apps.Api/Apps.Api.csproj", "src/services/apps/Apps.Api/"]
 RUN dotnet restore "src/services/apps/Apps.Api/Apps.Api.csproj"
 COPY . .
-WORKDIR "/src/src/services/apps/Apps.Api"
+WORKDIR "/src/services/apps/Apps.Api"
 RUN dotnet build "Apps.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
