--- a/src/services/apps/Apps.Api/Dockerfile
+++ b/src/services/apps/Apps.Api/Dockerfile
@@ -11,7 +11,7 @@ USER appuser
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["src/services/apps/Apps.Api/Apps.Api.csproj", "src/services/apps/Apps.Api/"]
+COPY ["Apps.Api.csproj", "src/services/apps/Apps.Api/"]
 RUN dotnet restore "src/services/apps/Apps.Api/Apps.Api.csproj"
 COPY . .
 WORKDIR "/src/services/apps/Apps.Api"
