--- a/src/services/apps/Apps.Api/Dockerfile
+++ b/src/services/apps/Apps.Api/Dockerfile
@@ -11,8 +11,8 @@ USER appuser
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["Apps.Api.csproj", "src/services/apps/Apps.Api/"]
-RUN dotnet restore "src/services/apps/Apps.Api/Apps.Api.csproj"
+COPY ["src/services/apps/Apps.Api/Apps.Api.csproj", "src/services/apps/Apps.Api/"]
+RUN dotnet restore "Apps.Api.csproj"
 COPY . .
 WORKDIR "/src/services/apps/Apps.Api"
 RUN dotnet build "Apps.Api.csproj" -c Release -o /app/build
