--- a/src/services/apps/Apps.Api/Dockerfile
+++ b/src/services/apps/Apps.Api/Dockerfile
@@ -13,7 +13,7 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
 COPY ["src/services/apps/Apps.Api/Apps.Api.csproj", "src/apps/"]
 RUN dotnet restore "src/apps/Apps.Api.csproj"
-COPY . .
+COPY . src/apps/
 WORKDIR "/src/apps/"
 RUN dotnet build "Apps.Api.csproj" -c Release -o /app/build
 
