--- a/src/services/apps/Apps.Api/Dockerfile
+++ b/src/services/apps/Apps.Api/Dockerfile
@@ -1,18 +1,14 @@
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
-EXPOSE 5268
-
-ENV ASPNETCORE_URLS=http://+:5268
-
-# Creates a non-root user with an explicit UID and adds permission to access the /app folder
-# For more info, please refer to https://aka.ms/vscode-docker-dotnet-configure-containers
-RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
-USER appuser
+EXPOSE 80
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /src
-COPY ["src/services/apps/Apps.Api/Apps.Api.csproj", "src/apps/"]
-RUN dotnet restore "src/apps/Apps.Api.csproj"
+COPY ["Apps.Api.csproj", "."]
+RUN dotnet restore "./Apps.Api.csproj"
+COPY . .
+WORKDIR "/src/."
 RUN dotnet build "Apps.Api.csproj" -c Release -o /app/build
 
 FROM build AS publish
