--- a/.github/workflows/BuildAppsDockerImage.yaml
+++ b/.github/workflows/BuildAppsDockerImage.yaml
@@ -5,6 +5,9 @@ on:
     paths:
       - 'src/services/apps/Apps.Api/*'
   workflow_dispatch:
+defaults:
+  run:
+    working-directory: ./src/services/apps/Apps.Api
 
 jobs:
   build-container-image:
