--- a/.github/workflows/BuildAppsDockerImage.yaml
+++ b/.github/workflows/BuildAppsDockerImage.yaml
@@ -28,5 +28,5 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/contosostore-apps:${{ github.sha }} -f ./src/services/apps/Apps.Api/Dockerfile
+        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/contosostore-apps:${{ github.sha }}
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/contosostore-apps:${{ github.sha }}
