--- a/.github/workflows/BuildAppsDockerImage.yaml
+++ b/.github/workflows/BuildAppsDockerImage.yaml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 defaults:
   run:
-    working-directory: ./src/services/apps/Apps.Api
+    working-directory: ./
 
 jobs:
   build-container-image:
@@ -28,5 +28,5 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/contosostore-apps:${{ github.sha }}
+        docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/contosostore-apps:${{ github.sha }} -f src/services/apps/Apps.Api/Dockerfile
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/contosostore-apps:${{ github.sha }}
