--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -117,6 +117,45 @@
         "appProject": "${workspaceFolder}/src/services/books/Books.Api/Books.Api.csproj",
         "enableDebugging": true
       }
+    },
+    {
+      "type": "docker-build",
+      "label": "docker-build - contoso-store-spa",
+      "platform": "node",
+      "dockerBuild": {
+        "dockerfile": "${workspaceFolder}/src/clients/contoso-store-spa/Dockerfile",
+        "context": "${workspaceFolder}/src/clients/contoso-store-spa",
+        "pull": true,
+        "tag": "contosostore-spa:dev"
+      },
+      "node": {
+        "package": "${workspaceFolder}/src/clients/contoso-store-spa/package.json"
+      }
+    },
+    {
+      "type": "docker-run",
+      "label": "docker-run: release - contoso-store-spa",
+      "dependsOn": ["docker-build - contoso-store-spa"],
+      "platform": "node",
+      "node": {
+        "package": "${workspaceFolder}/src/clients/contoso-store-spa/package.json"
+      }
+    },
+    {
+      "type": "docker-run",
+      "label": "docker-run: debug - contoso-store-spa",
+      "dependsOn": ["docker-build - contoso-store-spa"],
+      "dockerRun": {
+        "command": "npm start",
+        "env": {
+          "DEBUG": "*",
+          "NODE_ENV": "development"
+        }
+      },
+      "node": {
+        "package": "${workspaceFolder}/src/clients/contoso-store-spa/package.json",
+        "enableDebugging": true
+      }
     }
   ]
 }
